[gd_scene load_steps=28 format=2]

[ext_resource path="res://MainScenes/Background.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Tiles/MegaBackground.png" type="Texture" id=3]
[ext_resource path="res://Sounds/Pressure.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprite/wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainScenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cutscene/EndOfLevelCutscene.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level6.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/TestLevel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Level3.tscn" type="PackedScene" id=10]
[ext_resource path="res://Levels/Level2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Tiles/Arcology.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/Level4.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sprite/side_wall.tscn" type="PackedScene" id=14]
[ext_resource path="res://MainScenes/MainCamera.gd" type="Script" id=15]
[ext_resource path="res://Levels/Level5.tscn" type="PackedScene" id=16]
[ext_resource path="res://Cutscene/EndOfBossCutscene.tscn" type="PackedScene" id=17]
[ext_resource path="res://HUD/Disclaimer.tscn" type="PackedScene" id=18]
[ext_resource path="res://HUD/MainHUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://HUD/CreditsPanel.tscn" type="PackedScene" id=20]
[ext_resource path="res://HUD/TitleScreen.tscn" type="PackedScene" id=21]
[ext_resource path="res://HUD/GameOver.tscn" type="PackedScene" id=22]
[ext_resource path="res://HUD/UpgradeScreen.tscn" type="PackedScene" id=23]
[ext_resource path="res://HUD/PauseMenu.tscn" type="PackedScene" id=24]
[ext_resource path="res://HUD/OptionsMenu.tscn" type="PackedScene" id=25]
[ext_resource path="res://HUD/Thanks.tscn" type="PackedScene" id=26]
[ext_resource path="res://HUD/InstructionsScreen.tscn" type="PackedScene" id=27]

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
H_WALL = ExtResource( 5 )
V_WALL = ExtResource( 14 )
Player = ExtResource( 6 )
level1 = ExtResource( 9 )
level2 = ExtResource( 11 )
level3 = ExtResource( 10 )
level4 = ExtResource( 13 )
level5 = ExtResource( 16 )
level6 = ExtResource( 8 )
Arcology = ExtResource( 12 )
EndOfLevelCutscene = ExtResource( 7 )
EndOfBossCutscene = ExtResource( 17 )

[node name="Background" type="Node2D" parent="."]
pause_mode = 1
script = ExtResource( 1 )

[node name="MegaBackground" type="Sprite" parent="Background"]
position = Vector2( 378.764, -1738.81 )
texture = ExtResource( 3 )

[node name="Mobs" type="Node2D" parent="."]
pause_mode = 1

[node name="Enemies" type="Node2D" parent="Mobs"]

[node name="Hoops" type="Node2D" parent="Mobs"]

[node name="Player" type="Node2D" parent="Mobs"]

[node name="KludgeTimer" type="Timer" parent="."]
pause_mode = 1
one_shot = true

[node name="Level" type="Node2D" parent="."]
pause_mode = 1

[node name="Cutscenes" type="Node2D" parent="."]
pause_mode = 1

[node name="TitleScreen" parent="." instance=ExtResource( 21 )]
margin_left = 375.0
margin_top = 500.0
margin_right = 375.0
margin_bottom = 500.0

[node name="MainHUD" parent="." instance=ExtResource( 19 )]

[node name="UpgradeScreen" parent="." instance=ExtResource( 23 )]
visible = false

[node name="GameOver" parent="." instance=ExtResource( 22 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 24 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 302.606
margin_top = 335.079
margin_right = 450.606
margin_bottom = 461.079

[node name="CreditsPanel" parent="." instance=ExtResource( 20 )]
visible = false
margin_left = 83.4319
margin_top = 60.5617
margin_right = 643.432
margin_bottom = 812.562

[node name="Disclaimer" parent="." instance=ExtResource( 18 )]
visible = false
margin_left = 162.88
margin_top = 114.127
margin_right = 587.88
margin_bottom = 632.127

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
autoplay = true

[node name="OptionsMenu" parent="." instance=ExtResource( 25 )]
visible = false
margin_left = 108.42
margin_top = 182.104
margin_right = 639.42
margin_bottom = 484.104

[node name="Thanks" parent="." instance=ExtResource( 26 )]
visible = false
margin_left = 188.576
margin_top = 207.497
margin_right = 554.576
margin_bottom = 512.497

[node name="InstructionsScreen" parent="." instance=ExtResource( 27 )]
visible = false
margin_left = 63.1573
margin_top = 18.8364
margin_right = 682.157
margin_bottom = 915.836

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 15 )

[node name="ShakeTimer" type="Timer" parent="MainCamera"]
wait_time = 0.8
one_shot = true
[connection signal="timeout" from="KludgeTimer" to="." method="_on_KludgeTimer_timeout"]
[connection signal="pressed" from="TitleScreen/NewGame" to="." method="NewGame"]
[connection signal="pressed" from="TitleScreen/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="TitleScreen/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="TitleScreen/Credits" to="." method="_on_Credits_pressed"]
[connection signal="next_level" from="UpgradeScreen" to="." method="go_to_next_level"]
[connection signal="return_to_menu" from="GameOver" to="." method="_on_GameOver_return_to_menu"]
[connection signal="pressed" from="GameOver/Panel/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Return" to="." method="_on_GameOver_return_to_menu"]
[connection signal="pressed" from="PauseMenu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Thanks/Button" to="." method="_on_GameOver_return_to_menu"]
[connection signal="pressed" from="InstructionsScreen/Button" to="." method="_on_Instructions_Return_pressed"]
[connection signal="timeout" from="MainCamera/ShakeTimer" to="MainCamera" method="_on_ShakeTImer_timeout"]

[editable path="TitleScreen"]

[editable path="UpgradeScreen"]

[editable path="GameOver"]

[editable path="PauseMenu"]

[editable path="OptionsMenu"]

[editable path="Thanks"]

[editable path="InstructionsScreen"]
